# WORKSPACE-CI

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  moon.yml  mypy.toml  pyproject.toml  quality_exceptions.yaml  ruff.toml
ci/: _boot_layout_helpers.py  _docker_versions.py  _md_checkers.py  _md_http_client.py  _md_refs.py  _md_slug.py  check_boot_venv_layout.py  check_dead_code.py  check_dependency_versions.py  check_duplicate_dependencies.py  check_markdown_docs.py  check_required_hooks_present.py  dead_code_analyzer.py  exemption_files.py  models.py  paths.py
cloudflare/: .gitignore  config.yml.example
config/: banned_words.schema.yaml  banned_words.yaml  banned_words_exceptions.yaml  blocked_commit_patterns.schema.yaml  blocked_commit_patterns.yaml  boot_layout.schema.yaml  boot_layout.yaml  ci-profile.schema.yaml  coverage_thresholds.schema.yaml  coverage_thresholds.yaml  dead_code.schema.yaml  dead_code.yaml  dependency_excludes.schema.yaml  dependency_excludes.yaml  duplicate_dependency_excludes.schema.yaml  duplicate_dependency_excludes.yaml  exemption_files.yaml  file_length_limits.schema.yaml  markdown_docs.schema.yaml  pattern_categories.yaml  projects.schema.yaml  projects.yaml  required_hooks.schema.yaml  required_hooks.yaml  sensitive_files.schema.yaml  sensitive_files.yaml  sensitive_files_exceptions.yaml  silent_swallow_patterns.schema.yaml  silent_swallow_patterns.yaml  standards.schema.yaml  standards.yaml  system-deps.yaml  wiki_labels.schema.yaml  wiki_labels.yaml  wiki_pages.schema.yaml  wiki_pages.yaml
docs/: HOOKS.md  (+4 more)
(+558 files in other folders)
