[build-system]
requires = ["setuptools==80.10.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-ci"
version = "0.1.0"
description = "Shared CI library: shell-native git hooks, code quality checks, and config-driven enforcement"
requires-python = ">=3.13"
dependencies = [
    "PyYAML==6.0.3",
    "markdown-it-py==4.2.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "packaging==26.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.8.0",
    "black==26.5.1",
    "ruff==0.15.20",
    "mypy==2.1.0",
    "types-PyYAML==6.0.12.20260518",
]
lint = [
    "ruff==0.15.20",
    "black==26.5.1",
]
type-check = [
    "mypy==2.1.0",
    "pydantic==2.13.4",
]
test = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ci*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["lib/*.sh", "lib/*.awk", "config/*.yaml"]
"ci" = ["py.typed"]
